# author-tools

./: README.md
js/: csv2tex.html  wordcount.html
sh/: CMakeLists.txt  at-tex-diction  at-tex-style  at-tex-style-long  at-tex-style-nominalizations  at-tex-style-passive  at-tex-worddist
